# Code-Academy

Module1_Programming with C/20210130_PracticalTask/: main.c
Module1_Programming with C/20210305_Team_Tasks/: 20210305_Task_01.c  20210305_Task_02.c  20210305_Task_03.c  20210305_Task_04.c
Module1_Programming with C/20210322_Individual_Task/: CODE.INP.txt  CODE.c  Project.c  README.txt  functions.c  header.h
Module1_Programming with C/Barcode Scanner - C project/: CMakeLists.txt  README.txt
Module1_Programming with C/Barcode Scanner - C project/include/: Barcode.h  Defines.h
Module1_Programming with C/Barcode Scanner - C project/src/: Barcode.c  main.c
Module1_Programming with C/Theme10_Arrays & pointers/: 20210203_Task_01.c  20210203_Task_02.1.c  20210203_Task_02.c  20210203_Task_03.c  20210203_Task_04.c  20210203_Task_05.c  20210203_Task_06.c  20210203_Task_07.c  20210203_Task_08.c
Module1_Programming with C/Theme11_String, functions & pointers/: 20210205_Task_01.c  20210205_Task_02.c  20210205_Task_03.c  20210205_Task_04.c  20210205_Task_05.c  20210205_Task_06.c  20210205_Task_07.c  20210205_Task_08.c  20210205_Task_09.c  20210205_Task_10.c  20210205_Task_11.c  20210205_Task_12.c
Module1_Programming with C/Theme12_Multidimensional arrays & pointers/: 20210208_Task_01.c  20210208_Task_02.c  20210208_Task_03.c  20210208_Task_04.c  20210208_Task_05.c  20210208_Task_06.c  20210208_Task_07.c
Module1_Programming with C/Theme14_ Dynamic memory/: 20210212_Task_01.c  (+10 more)
Module2_Python_Fundamentals/: Method_Overloading_Example.py  Method_Overriding_Example.py
(+327 files in other folders)
